@@ -941,8 +941,12 @@ content.javascript.log:
     `error`.
 
 content.javascript.log_message:
+  renamed: content.javascript.log_message.levels
+
+content.javascript.log_message.levels:
   type:
     name: Dict
+    none_ok: True
     keytype: String
     valtype:
       name: FlagList
@@ -962,6 +966,29 @@ content.javascript.log_message:
 
     By default, errors happening in qutebrowser internally or in userscripts are
     shown to the user.
+
+content.javascript.log_message.excludes:
+  type:
+    name: Dict
+    keytype: String
+    none_ok: True
+    valtype:
+      name: List
+      valtype: String
+  default:
+    "userscript:_qute_stylesheet":
+      - "Refused to apply inline style because it violates the following Content
+        Security Policy directive: *"
+  desc: >-
+    Javascript messages to *not* show in the UI, despite a corresponding
+    `content.javascript.log_message.levels` setting.
+
+    Both keys and values are glob patterns, with the key matching the location
+    of the error, and the value matching the error message.
+
+    By default, the https://web.dev/csp/[Content security policy] violations
+    triggered by qutebrowser's stylesheet handling are excluded, as those errors
+    are to be expected and can't be easily handled by the underlying code.
 
 content.javascript.modal_dialog:
   type: Bool
