@@ -143,6 +143,10 @@ Feature: Various utility commands.
         Then the error "[Errno 2] *: '/nonexistentfile'" should be shown
         And "No output or error" should not be logged
 
+    Scenario: CSP errors in qutebrowser stylesheet script
+        When I open restrictive-csp
+        Then the javascript message "Refused to apply inline style because it violates the following Content Security Policy directive: *" should be logged
+
     # :debug-webaction
 
     Scenario: :debug-webaction with valid value
